<resources>
    <string name="app_name">MyMedic</string>
    <string name="slidebar_button">Slide Bar Button</string>
    <string name="notification_button">Notification Button</string>
    <string name="mymedic_app_logo">My Medic Application Logo</string>
    <string name="my_profile">My Profile</string>
    <string name="doctorView">Doctor View</string>
    <string name="my_drugs">My Drugs</string>
    <string name="my_drug_usage">My Drug Usage</string>
    <string name="first_name">First Name</string>
    <string name="last_Name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="nic">NIC</string>
    <string name="dob">Date of Birth</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign Up</string>
    <string name="or">Or</string>
    <string name="welcome_Msg">Welcome to My Medic,</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="address1">Address 1</string>
    <string name="address2">Address 2</string>
    <string name="city">City</string>
    <string name="agreeterms">Agree Terms and Condition</string>
    <string name="notification">Notifications</string>
    <string name="firstsignup">Sign Up - First Step</string>
    <string name="next">Next</string>
    <string name="title_activity_drug_repository">DrugRepository</string>
    <string name="DrugMan">Drug Manufacturer</string>
    <string name="DrugName">Drug Name</string>
    <string name="DrugDosage">Dosage</string>
    <string name="drugEnter">Enter Drug Details,</string>
    <string name="save">Save</string>
    <string name="title_activity_drug_manager">DrugManager</string>
    <string name="PrescriptionId">Prescription ID:-</string>
    <string name="PrescriptionName">Prescription Name</string>
    <string name="DoctorName">Doctor Name</string>
    <string name="sampleData">Sample</string>
    <string name="disease">Disease</string>
    <string name="discription">Discription</string>
    <string name="startDate">Start Date (YYYY/MM/DD)</string>
    <string name="endDate">End Date (YYYY/MM/DD)</string>
    <string name="addDrug">Add Drugs</string>
    <string name="addPrescription">Add Prescription</string>
    <string name="add">Add</string>
    <string name="selectDrug">Select a Drug</string>
    <string name="useDrug">Method of Drug Usage</string>
    <string name="hourlyPeriod">Duration (Hours)</string>
    <string name="takeAfter">Take after</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ok">Okay</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="initials">Initials</string>
    <string name="address">Address</string>
    <string name="telephone">Telephone</string>
    <string name="emergency_no">Emergency No</string>
    <string name="dinner">Dinner</string>
    <string name="usernamestr">Sachith Rukshan</string>
    <string name="useremailstr">sachithrukshanmail@gmail.com</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="setting">Settings</string>
    <string name="drug_manager">Drug Manager</string>
    <string name="numOfPills">No of Pills</string>
    <string name="assignDrug">Assign Drug</string>
    <string name="coveringMeals">Covering Meals</string>
    <string name="beforeOrAfter">Before or After</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="allegies">Allegies</string>
    <string name="operations">Operations</string>
    <string name="diseases">Diseases</string>
    <string name="apply">Apply</string>
    <string name="edit">Edit</string>
</resources>
