<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.mymedic.SignUp"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/background_image_1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <fragment
            android:name="com.example.user.mymedic.PatientTopBar"
            android:id="@+id/patient_top_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/activity_patient_top_bar" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/firstsignup"
                android:textSize="30sp"
                android:textColor="@color/secondaryTextColor"/>

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/first_name" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/last_Name" />

            <EditText
                android:id="@+id/nic"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/nic" />

            <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/dob" />

            <EditText
                android:id="@+id/phone"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/phone" />

            <EditText
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/gender" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/next"
                android:background="@color/colorAccent"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
