<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.mymedic.PatientLogin"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/background_image_1"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_Msg"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/secondaryTextColor"
        android:textAlignment="center"
        android:scrollHorizontally="false"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/username"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/password"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:gravity="end"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/secondaryTextColor"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/patientSignin"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/signin"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@color/colorAccent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/or"
        android:textSize="30sp"
        android:textColor="@color/secondaryTextColor"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/patientSignup"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/signup"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@color/colorAccent"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        app:srcCompat="@drawable/heart_with_wave" />

</LinearLayout>