<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.mymedic.PatientSignUp"
    android:orientation="vertical"
    android:weightSum="10"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <fragment
            android:name="com.example.user.mymedic.PatientTopBar"
            android:id="@+id/patient_top_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/activity_patient_top_bar" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/signup"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/nic"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/nic" />

        <EditText
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/dob" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/phone" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/gender" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agreeterms"
            android:layout_margin="10dp"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/signup"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="10dp"/>



    </LinearLayout>
</LinearLayout>