<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.mymedic.AddDrugSchedule"
    android:orientation="vertical"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <fragment
            android:name="com.example.user.mymedic.PatientTopBar"
            android:id="@+id/patient_top_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout="@layout/activity_patient_top_bar" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addPrescription"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:textColor="@color/secondaryTextColor"/>

            <EditText
                android:id="@+id/prescriptionNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="15dp"
                android:inputType="textPersonName"
                android:hint="@string/PrescriptionName" />

            <EditText
                android:id="@+id/doctorNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="15dp"
                android:inputType="textPersonName"
                android:hint="@string/DoctorName" />

            <EditText
                android:id="@+id/diseaseField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="15dp"
                android:inputType="textPersonName"
                android:hint="@string/disease" />

            <EditText
                android:id="@+id/discriptionField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="15dp"
                android:lines="10"
                android:maxLines="10"
                android:inputType="textMultiLine"
                android:hint="@string/discription"
                android:gravity="bottom"/>

            <EditText
                android:id="@+id/startDateField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="15dp"
                android:clickable="true"
                android:focusable="false"
                android:inputType="date"
                android:hint="@string/startDate"/>

            <EditText
                android:id="@+id/endDateField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="15dp"
                android:clickable="true"
                android:focusable="false"
                android:inputType="date"
                android:hint="@string/endDate"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/addDrugBtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/addDrug"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorAccent"
                    android:textSize="20sp"/>

                <Button
                    android:id="@+id/saveBtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorAccent"
                    android:textSize="20sp"/>



            </LinearLayout>


        </LinearLayout>



    </ScrollView>


</LinearLayout>
