<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.mymedic.Password_Recovery"
    android:orientation="vertical"
    android:weightSum="10"
    android:fillViewport="true"
    android:background="@drawable/background_image_1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <fragment
            android:name="com.example.user.mymedic.PatientTopBar"
            android:id="@+id/patient_top_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/activity_patient_top_bar" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/password_recovery"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/secondaryTextColor"/>

        <EditText
            android:id="@+id/current_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:hint="@string/current_password"/>

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/new_password"/>

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_password"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/ok"
            android:layout_marginHorizontal="135dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorAccent"/>

    </LinearLayout>
</LinearLayout>