<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.mymedic.AddDrug"
    android:weightSum="10"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <fragment
            android:name="com.example.user.mymedic.PatientTopBar"
            android:id="@+id/patient_top_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout="@layout/activity_patient_top_bar"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:padding="15dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drugEnter"
            android:textColor="@color/secondaryTextColor"
            android:textSize="25sp"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/drugManufacturerEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/DrugMan"
            android:padding="20dp"/>

        <EditText
            android:id="@+id/drugNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/DrugName"
            android:padding="20dp"/>

        <EditText
            android:id="@+id/dosageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/DrugDosage"
            android:padding="20dp"/>

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent" />


    </LinearLayout>

</LinearLayout>
