<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.example.user.mymedic.AssignDrug">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <fragment
            android:id="@+id/patient_top_bar"
            android:name="com.example.user.mymedic.PatientTopBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout="@layout/activity_patient_top_bar" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addDrug"
                android:textColor="@color/secondaryTextColor"
                android:textSize="30sp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:padding="15dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectDrug"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/useDrug"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"/>

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/hourlyPeriod" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/useDrug"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"/>

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lunch"
                    android:layout_marginLeft="20dp"/>

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dinner"
                    android:layout_marginLeft="20dp"/>

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/button4"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
